      variable to get mangled.
    * Fixed bug in 'r.ClassPath()' which caused a traceback.
    * A bug that caused the "change password" tab to be displayed when
      browsing the repository via the web as an anonymous user has
      been fixed.
    * The web service code no longer permits the anonymous user to
      view the "change password" form (/conary/chPassForm).

Changes in 1.0.19:
  o API Change:
    * In order to fully represent empty flavors in Conary, a new Flavor
      object class has been added.  Previously, DependencySet objects
      were used to store flavor information.  Unfortunately it was not
      possible to distinguish "empty flavor" from "flavor not specified".
      When dealing with thawing frozen flavors, use ThawFlavor() instead
      of ThawDependencySet().  When testing to see if a flavor is empty,
      use the isEmpty() method of the flavor object.

  o Client Changes:
    * The default resolveLevel setting is now 2, this means that
      conary will try to update troves that would otherwise cause an
      update to fail.  See the conary man page for more details.
    * Multiple bugs have been fixed in interactive prompting for user
      passwords (CNY-466):
      - Password prompts are based on the server name portion of the
        label being accessed, not the actual hostname of the server
        (these are often different when repositoryMaps are used).
      - When no password callback is available, the operation will
        fail with an open error (which is identical to what would
        happen if no user name was present) instead of giving a
        traceback.
      - The download thread uses the passwords which the original
        thread obtained from the user.
      - The download thread is able to prompt for passwords from the
        user if distributed changesets require access to additional
        repositories.

  o Build Changes:
    * "r.Ant()", "r.JavaCompile()", and "r.ClassPath()" build actions